--- a/tools/eslint-config/package.json
+++ b/tools/eslint-config/package.json
@@ -1,23 +1,26 @@
 {
   "name": "@pet-shop/eslint-config",
-  "version": "0.0.0",
   "type": "module",
+  "version": "0.0.0",
   "private": true,
   "exports": {
-    "./base": "./base.js",
-    "./next-js": "./next.js",
-    "./react-internal": "./react-internal.js"
+    ".": "./base.js",
+    "./react": "./react.js",
+    "./next": "./next.js"
+  },
+  "scripts": {
+    "clean": "git clean -xdf .cache .turbo node_modules",
+    "lint": "eslint --cache --cache-location .cache/.eslintcache",
+    "lint:fix": "eslint --fix --cache --cache-location .cache/.eslintcache"
   },
   "devDependencies": {
-    "@eslint/js": "^9.31.0",
+    "@antfu/eslint-config": "^5.2.0",
+    "@eslint-react/eslint-plugin": "^1.52.3",
     "@next/eslint-plugin-next": "^15.4.2",
     "eslint": "^9.31.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-only-warn": "^1.1.0",
-    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-format": "^1.0.1",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-turbo": "^2.5.0",
-    "globals": "^16.3.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.37.0"
   }
