--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -1,13 +1,15 @@
 {
   "name": "admin",
-  "version": "0.1.0",
   "type": "module",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --port 3001",
     "build": "next build",
+    "clean": "git clean -xdf .cache .next .turbo node_modules",
+    "dev": "next dev --turbopack --port 3001",
+    "lint": "eslint --cache --cache-location .cache/.eslintcache",
+    "lint:fix": "eslint --fix --cache --cache-location .cache/.eslintcache",
     "start": "next start",
-    "lint": "next lint --max-warnings 0",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
