--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,9 +6,14 @@
     "./*": "./src/*.tsx"
   },
   "scripts": {
-    "lint": "eslint . --max-warnings 0",
-    "generate:component": "turbo gen react-component",
+    "clean": "git clean -xdf .cache .turbo node_modules",
+    "lint": "eslint --cache --cache-location .cache/.eslintcache",
+    "lint:fix": "eslint --fix --cache --cache-location .cache/.eslintcache",
     "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@pet-shop/eslint-config": "workspace:*",
@@ -18,9 +23,5 @@
     "@types/react-dom": "19.1.1",
     "eslint": "^9.31.0",
     "typescript": "5.8.2"
-  },
-  "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
   }
 }
