--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,3 +2,8 @@ packages:
   - 'apps/*'
   - 'packages/*'
   - 'tools/*'
+
+catalog:
+  '@types/node': ^22.15.3
+  eslint: ^9.31.0
+  typescript: ^5.8.3
