--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,10 +21,10 @@
   "devDependencies": {
     "@pet-shop/eslint-config": "workspace:*",
     "@pet-shop/typescript-config": "workspace:*",
-    "@types/node": "^22.15.3",
+    "@types/node": "catalog:",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
-    "eslint": "^9.31.0",
-    "typescript": "5.8.2"
+    "eslint": "catalog:",
+    "typescript": "catalog:"
   }
 }
