--- a/tools/eslint-config/package.json
+++ b/tools/eslint-config/package.json
@@ -17,11 +17,11 @@
     "@antfu/eslint-config": "^5.2.0",
     "@eslint-react/eslint-plugin": "^1.52.3",
     "@next/eslint-plugin-next": "^15.4.2",
-    "eslint": "^9.31.0",
+    "eslint": "catalog:",
     "eslint-plugin-format": "^1.0.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "typescript": "^5.8.2",
+    "typescript": "catalog:",
     "typescript-eslint": "^8.37.0"
   }
 }
