--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -25,6 +25,7 @@
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
     "eslint": "catalog:",
+    "lint-staged": "catalog:",
     "typescript": "catalog:"
   }
 }
