--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,6 +22,7 @@
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
     "eslint": "catalog:",
+    "lint-staged": "catalog:",
     "typescript": "catalog:"
   }
 }
