--- a/tools/eslint-config/package.json
+++ b/tools/eslint-config/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-format": "^1.0.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "lint-staged": "catalog:",
     "typescript": "catalog:",
     "typescript-eslint": "^8.37.0"
   }
