--- a/turbo.json
+++ b/turbo.json
@@ -5,8 +5,8 @@
     "//#clean:root": {
       "cache": false
     },
-    "//#lint:fix:root": {},
     "//#lint:root": {},
+    "//#lint:root:fix": {},
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
