--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pet-shop/ui",
+  "name": "@next-solution/ui",
   "version": "0.0.0",
   "private": true,
   "exports": {
@@ -16,8 +16,8 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@pet-shop/eslint-config": "workspace:*",
-    "@pet-shop/typescript-config": "workspace:*",
+    "@next-solution/eslint-config": "workspace:*",
+    "@next-solution/typescript-config": "workspace:*",
     "@types/node": "^22.15.3",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
