--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,7 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "exports": {
-    "./*": "./src/*.tsx"
+    "./components/*": "./src/components/*.tsx",
+    "./helpers/*": "./src/helpers/*.ts",
+    "./hooks/*": [
+      "./src/hooks/*.ts",
+      "./src/hooks/*.tsx"
+    ],
+    "./postcss.config": "./postcss.config.mjs",
+    "./styles/*": "./src/styles/*"
   },
   "scripts": {
     "clean": "git clean -xdf .cache .turbo node_modules",
@@ -12,17 +19,26 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.539.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@next-solution/eslint-config": "workspace:*",
     "@next-solution/typescript-config": "workspace:*",
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^22.15.3",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
     "eslint": "catalog:",
     "lint-staged": "catalog:",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12",
+    "tw-animate-css": "^1.3.6",
     "typescript": "catalog:"
   }
 }
