--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@next-solution/eslint-config": "workspace:*",
+    "@turbo/gen": "^2.5.6",
     "eslint": "catalog:",
     "husky": "^9.1.7",
     "lint-staged": "catalog:",
